--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@size-limit/preset-small-lib": "^4.10.2",
 		"@types/babel__core": "^7.1.14",
 		"@types/jest": "^26.0.22",
+		"@types/lodash": "^4.14.168",
 		"babel-jest": "^26.6.3",
 		"babel-loader": "^8.2.2",
 		"husky": "^6.0.0",
@@ -61,5 +62,8 @@
 		"tsdx": "^0.14.1",
 		"tslib": "^2.2.0",
 		"typescript": "^4.2.4"
+	},
+	"dependencies": {
+		"lodash": "^4.17.21"
 	}
 }
