--- a/package.json
+++ b/package.json
@@ -1,69 +1,68 @@
 {
-	"version": "0.1.0",
-	"license": "MIT",
-	"main": "dist/index.js",
-	"typings": "dist/index.d.ts",
-	"files": [
-		"dist",
-		"src"
-	],
-	"engines": {
-		"node": ">=10"
-	},
-	"scripts": {
-		"start": "tsdx watch",
-		"build": "tsdx build",
-		"test": "jest",
-		"test:watch": "jest --watchAll",
-		"lint": "tsdx lint",
-		"prepare": "tsdx build",
-		"size": "size-limit",
-		"analyze": "size-limit --why",
-		"dev": "nodemon src/index.ts"
-	},
-	"peerDependencies": {},
-	"husky": {
-		"hooks": {
-			"pre-commit": "tsdx lint"
-		}
-	},
-	"prettier": {
-		"printWidth": 80,
-		"semi": true,
-		"singleQuote": true,
-		"trailingComma": "es5"
-	},
-	"name": "etales-map-db",
-	"author": "Dariusz Niemczyk",
-	"module": "dist/etales-map-db.esm.js",
-	"size-limit": [
-		{
-			"path": "dist/etales-map-db.cjs.production.min.js",
-			"limit": "10 KB"
-		},
-		{
-			"path": "dist/etales-map-db.esm.js",
-			"limit": "10 KB"
-		}
-	],
-	"devDependencies": {
-		"@size-limit/preset-small-lib": "^4.10.2",
-		"@types/babel__core": "^7.1.14",
-		"@types/jest": "^26.0.22",
-		"@types/lodash": "^4.14.168",
-		"babel-jest": "^26.6.3",
-		"babel-loader": "^8.2.2",
-		"husky": "^6.0.0",
-		"jest": "^26.6.3",
-		"nodemon": "^2.0.7",
-		"size-limit": "^4.10.2",
-		"ts-jest": "^26.5.4",
-		"ts-node": "^9.1.1",
-		"tsdx": "^0.14.1",
-		"tslib": "^2.2.0",
-		"typescript": "^4.2.4"
-	},
-	"dependencies": {
-		"lodash": "^4.17.21"
-	}
+  "name": "etales-db-updater",
+  "description": "Update database of Etales Web DB with data mined from the newest map version",
+  "version": "0.0.0",
+  "author": "Dariusz Niemczyk @Palid",
+  "bin": {
+    "etales-db-updater": "./bin/run"
+  },
+  "bugs": "https://github.com/Palid/etales-db-updater/issues",
+  "dependencies": {
+    "@oclif/command": "^1.8.0",
+    "@oclif/config": "^1.17.0",
+    "@oclif/plugin-help": "^3.2.2",
+    "tslib": "^1.14.1"
+  },
+  "devDependencies": {
+    "@oclif/dev-cli": "^1.26.0",
+    "@oclif/test": "^1.2.8",
+    "@types/chai": "^4.2.18",
+    "@types/lodash": "^4.14.170",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.6.1",
+    "chai": "^4.3.4",
+    "eslint": "^5.16.0",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.9"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "files": [
+    "/bin",
+    "/lib"
+  ],
+  "homepage": "https://github.com/Palid/etales-db-updater",
+  "keywords": [
+    "oclif"
+  ],
+  "license": "MIT",
+  "main": "lib/index.js",
+  "oclif": {
+    "bin": "etales-db-updater"
+  },
+  "repository": "Palid/etales-db-updater",
+  "scripts": {
+    "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
+    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "test:watch": "npm run test -- --watch",
+    "version": "oclif-dev readme && git add README.md",
+    "prepare": "husky install",
+    "pack": "oclif-dev pack",
+    "lint": "eslint . --ext .ts --config .eslintrc"
+  },
+  "types": "lib/index.d.ts",
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
