--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,18 @@
 {
-  "include": ["src", "types"],
   "compilerOptions": {
-    "baseUrl": ".",
-    "module": "CommonJS",
-    "lib": ["esnext"],
-    "target": "ESNext",
-    "importHelpers": true,
     "declaration": true,
-    "sourceMap": true,
-    "rootDir": "./src",
+    "importHelpers": true,
+    "module": "commonjs",
+    "outDir": "lib",
+    "rootDir": "src",
     "strict": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "moduleResolution": "node",
-    "jsx": "react",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "allowSyntheticDefaultImports": true,
-    "paths": {}
-  }
+    "target": "esnext",
+    "baseUrl": "./src",
+    "paths": {
+      "$matchers/*": ["./src/matchers/*"],
+      "$src/*": ["./*"]
+    },
+    "composite": true
+  },
+  "include": ["src/**/*.ts"]
 }
