--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
-    "tslib": "^1.14.1"
+    "long": "^4.0.0",
+    "seek-bzip": "^2.0.0",
+    "tslib": "^1.14.1",
+    "war3map": "^0.1.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -62,7 +66,10 @@
   },
   "types": "lib/index.d.ts",
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{ts, js}": "eslint --cache --fix",
+    "*.{md}": "prettier --write"
+  },
+  "husky": {
+    "precommit": "lint-staged"
   }
 }
