--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
+    "@wowserhq/stormjs": "^0.4.1",
     "long": "^4.0.0",
     "seek-bzip": "^2.0.0",
     "tslib": "^1.14.1",
