--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "prettier": "^2.3.0",
+    "stdout-stderr": "^0.1.13",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.9"
   },
