--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.170",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.1",
+    "@typescript-eslint/parser": "^4.29.2",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
