--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wowserhq/stormjs": "^0.4.1",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.10.0",
+    "json2csv": "^5.0.6",
     "long": "^4.0.0",
     "seek-bzip": "^2.0.0",
     "tslib": "^1.14.1",
@@ -25,15 +26,16 @@
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.18",
+    "@types/jest": "^27.0.3",
+    "@types/json2csv": "^5.0.3",
     "@types/lodash": "^4.14.170",
-    "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.1",
     "@typescript-eslint/parser": "^4.29.2",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^3.1.0",
-    "eslint-config-oclif-typescript": "^0.2.0",
+    "eslint-config-oclif-typescript": "^1.0.2",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
